[gd_scene load_steps=4 format=3 uid="uid://d30uity1kr0js"]

[ext_resource type="Script" path="res://scripts/objects/Bubble.gd" id="1_bubbl"]
[ext_resource type="Texture2D" uid="uid://6iay2q3mhsll" path="res://assets/sprites/Bubble.png" id="2_rijsl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 8.0

[node name="Bubble" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_bubbl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rijsl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
